--- a/HelloWorld/cocos2d.vcxproj.filters
+++ b/HelloWorld/cocos2d.vcxproj.filters
@@ -713,7 +713,6 @@
     <ClCompile Include="Classes\AppDelegate.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
-    <ClCompile Include="..\cocos2dx\platform\win8_metro\FTTextPainter.cpp" />
     <ClCompile Include="..\cocos2dx\extensions\CCNotificationCenter.cpp">
       <Filter>cocos2dx\extensions</Filter>
     </ClCompile>
@@ -740,6 +739,9 @@
     </ClCompile>
     <ClCompile Include="..\cocos2dx\support\zip_support\ZipUtils.cpp">
       <Filter>cocos2dx\support\zip_support</Filter>
+    </ClCompile>
+    <ClCompile Include="..\cocos2dx\platform\win8_metro\FTTextPainter.cpp">
+      <Filter>cocos2dx\platform\win8_metro</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -990,7 +992,6 @@
     <ClInclude Include="..\Box2D\Box2D.h">
       <Filter>Box2d</Filter>
     </ClInclude>
-    <ClInclude Include="..\cocos2dx\platform\win8_metro\DirectXRender.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Classes\MyContactListener.h">
       <Filter>Classes</Filter>
@@ -998,7 +999,6 @@
     <ClInclude Include="Classes\AppDelegate.h">
       <Filter>Classes</Filter>
     </ClInclude>
-    <ClInclude Include="..\cocos2dx\platform\win8_metro\FTTextPainter.h" />
     <ClInclude Include="..\cocos2dx\extensions\CCNotificationCenter.h">
       <Filter>cocos2dx\extensions</Filter>
     </ClInclude>
@@ -1028,6 +1028,12 @@
     </ClInclude>
     <ClInclude Include="..\cocos2dx\support\zip_support\ZipUtils.h">
       <Filter>cocos2dx\support\zip_support</Filter>
+    </ClInclude>
+    <ClInclude Include="..\cocos2dx\platform\win8_metro\DirectXRender.h">
+      <Filter>cocos2dx\platform\win8_metro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\cocos2dx\platform\win8_metro\FTTextPainter.h">
+      <Filter>cocos2dx\platform\win8_metro</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
